WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303085
espn.com: Unable to play Monday Night Football (MNF) videos from "Watch" page in Safari (Live content on Mondays only)
https://bugs.webkit.org/show_bug.cgi?id=303085
Summary
espn.com: Unable to play Monday Night Football (MNF) videos from "Watch" page...
Jean-Yves Avenard [:jya]
Reported
2025-11-25 01:39:39 PST
Steps to Reproduce: 1. Launch ESPN from Safari browser. 2. Login with valid credentials. 3. Goto ESPN Watch page. 4. Play any live NFL content ; playback won't start and after a while an error will be displayed
rdar://159133059
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-11-25 01:51:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54439
EWS
Comment 2
2025-11-25 13:08:07 PST
Committed
303550@main
(7cb3a439c832): <
https://commits.webkit.org/303550@main
> Reviewed commits have been landed. Closing PR #54439 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug